# Hermes-Yachiyo

./: .gitignore  README.en.md  README.ja.md  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: astrbot-plugin.instructions.md  core.instructions.md
apps/: desktop_launcher.py
apps/bridge/: __init__.py  (+2 more)
assets/: icon.icns
docs/: desktop-frontend-architecture.md  experience-report-2026-05-05.md  implementation-plan.md  knowledge-base.md  live2d-assets.md  screenshot-index.md  tts-voice-assets.md  ui-resource-architecture.md  user-manual.md
memory/: 00-project-definition.md  01-system-architecture.md  02-routing-rules.md  03-hermes-boundary.md  04-hapi-boundary.md
packaging/: backend_entry.py
scripts/: build_backend.py  package_tts_voice.py
tests/: conftest.py  test_assistant_intent_route.py  test_assistant_profile_route.py  test_astrbot_handlers.py  test_bridge_server.py  test_chat_api.py  test_chat_bridge.py  test_chat_session.py  test_chat_store.py  test_chat_window.py  test_chat_window_singleton.py  test_desktop_launcher.py  test_display_modes.py  test_effect_policy.py  test_executor.py  test_hermes_capabilities.py  test_hermes_installer.py  test_integration_status.py  test_launcher_notifications.py  test_main_api_modes.py  test_mode_settings.py  test_native_window.py  test_proactive.py  test_protocol.py  test_runtime.py  test_screenshot.py  test_shell_app_entrypoint.py  test_startup.py  test_state.py  test_task_runner.py  test_terminal.py  test_tts.py  test_ui_bridge_routes.py  test_uninstall.py  test_window_exit.py
(+121 files in other folders)
