[project]
name = "hermes-yachiyo"
version = "0.1.0"
description = "Hermes-Yachiyo: 桌面优先本地个人 agent 应用"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6.0",
    "pywebview>=5.0",
    "pystray>=0.19.0",
    "Pillow>=10.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "ruff>=0.3.0",
]

[project.scripts]
hermes-yachiyo = "apps.shell.app:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "packages*", "integrations*"]
exclude = ["memory*", "tests*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
